# rosalind

./: .gitignore  README.md  makefile  pyproject.toml
alignment/: test_counting_DNA_nucleotides.py
string_algorithms/: test_complementing_a_strand_of_DNA.py  test_counting_point_mutations.py  test_transcribing_DNA_into_RNA.py
