[tool.poetry]
name = "rosalind"
version = "0.1.0"
description = ""
authors = ["JamesHooMY <hoosinyong@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
